<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
    >
    <!--     xmlns:tools="http://schemas.android.com/tools" -->

    <com.ipcamerasen5.main.widget.Sen5TextView
        android:id="@+id/main_single_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/eighty"
        android:layout_marginTop="@dimen/fortyEight"
        android:drawableLeft="@drawable/red_point_drawable2"
        android:drawablePadding="@dimen/sixteen"
        android:text="@string/record_item_recording"
        android:textColor="@color/record_item_recording"
        android:textSize="30dp"
        android:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/rl_LTCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="ltCamera"
        >

    </RelativeLayout>


    <ImageView
        android:id="@+id/whole_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mask_menu"
        />


    <!--四分屏UI:-->
    <LinearLayout
        android:id="@+id/ll_four_gls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <RelativeLayout
                    android:id="@+id/rl_LTCamera_41"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </RelativeLayout>

                <Button
                    android:id="@+id/btns_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/four_camera_selector"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/status_off_line"
                    android:textColor="@color/tv_white"
                    android:textSize="28dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <RelativeLayout
                    android:id="@+id/rl_LTCamera_42"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </RelativeLayout>

                <Button
                    android:id="@+id/btns_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/four_camera_selector"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/status_off_line"
                    android:textColor="@color/tv_white"
                    android:textSize="28dp"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <RelativeLayout
                    android:id="@+id/rl_LTCamera_43"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </RelativeLayout>

                <Button
                    android:id="@+id/btns_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/four_camera_selector"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/status_off_line"
                    android:textColor="@color/tv_white"
                    android:textSize="28dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <RelativeLayout
                    android:id="@+id/rl_LTCamera_44"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </RelativeLayout>

                <Button
                    android:id="@+id/btns_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/four_camera_selector"
                    android:clickable="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/status_off_line"
                    android:textColor="@color/tv_white"
                    android:textSize="28dp"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <!--左侧滚动菜单-->
    <com.ipcamerasen5.main.widget.SlideView
        android:id="@+id/slide_view"
        android:layout_width="@dimen/ThreeHundred"
        android:layout_height="@dimen/eighty"
        android:background="@drawable/left_slide_selector"
        android:focusable="true"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/ll_addview"
        android:layout_width="@dimen/ThreeHundred"
        android:layout_height="@dimen/FHundred"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/thirty"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/fiftyFive"
                android:layout_height="@dimen/fiftyFive"
                android:scaleType="fitXY"
                android:src="@drawable/btn_camera"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:gravity="center_vertical"
                android:text="@string/ipcamera_camera"
                android:textColor="#ffffff"
                android:textSize="@dimen/twentySix"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/fiftyFive"
                android:layout_height="@dimen/fiftyFive"
                android:scaleType="fitXY"
                android:src="@drawable/btn_capture"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:gravity="center_vertical"
                android:text="@string/ipcamera_capture"
                android:textColor="#ffffff"
                android:textSize="@dimen/twentySix"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/fiftyFive"
                android:layout_height="@dimen/fiftyFive"
                android:scaleType="fitXY"
                android:src="@drawable/btn_4screens"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:gravity="center_vertical"
                android:text="@string/ipcamera_fourscreens"
                android:textColor="#ffffff"
                android:textSize="@dimen/twentySix"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/fiftyFive"
                android:layout_height="@dimen/fiftyFive"
                android:scaleType="fitXY"
                android:src="@drawable/btn_record"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:gravity="center_vertical"
                android:text="@string/ipcamera_record"
                android:textColor="#ffffff"
                android:textSize="@dimen/twentySix"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/fiftyFive"
                android:layout_height="@dimen/fiftyFive"
                android:scaleType="fitXY"
                android:src="@drawable/btn_file"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/thirty"
                android:gravity="center_vertical"
                android:text="@string/video_files"
                android:textColor="#ffffff"
                android:textSize="@dimen/twentySix"
                />
        </LinearLayout>


    </LinearLayout>

    <!--摄像头列表-->
    <RelativeLayout
        android:id="@+id/rl_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/OE"
        android:layout_toEndOf="@+id/ll_addview"
        android:background="@android:color/transparent">

        <com.open.androidtvwidget.leanback.recycle.RecyclerViewTV
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:visibility="visible"/>
    </RelativeLayout>


    <!--没有摄像头时显示的页面-->
    <LinearLayout
        android:id="@+id/ll_show_add_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/no_camera_ui_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.ipcamerasen5.main.widget.Sen5TextViewRobotoThin
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:gravity="center_horizontal"
            android:text="@string/wizards_info"
            android:textColor="@android:color/white"
            android:textSize="48dp"
            />
        <!--android:text="Without a camera, press the button to add the camera"-->
        <com.ipcamerasen5.main.widget.Sen5Button
            android:id="@+id/btn_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty"
            android:background="@drawable/selector_no_camera_ui_btn_bg"
            android:text="@string/wizards_go_btn"
            android:textColor="#594938"
            android:textSize="40dp"
            android:visibility="visible"/>

        <com.ipcamerasen5.main.widget.Sen5Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:background="@drawable/selector_no_camera_ui_btn_bg"
            android:text="@string/wizards_exit_btn"
            android:textColor="#594938"
            android:textSize="32dp"
            android:visibility="visible"/>
    </LinearLayout>
</RelativeLayout>
